edit module type | fix bug

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "split-innertext-html",
   "version": "1.0.1",
   "description": "A class that splits the inner text of an Element into characters or words",
-  "main": ".dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc"
