--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "es2016",
 
     /* Modules */
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node10",
     "baseUrl": "./",
 
